fix: Correct docker-compose for local development environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
+version: '3.8'
+
 services:
   backend:
+    platform: linux/arm64/v8 # Explicitly set platform for ARM Macs
     build:
       context: .
       dockerfile: Dockerfile
@@ -8,11 +11,7 @@ services:
     env_file:
       - .env        # 從 .env 檔案加載環境變數 (包含 Supabase 連接字串和 Google OAuth keys)
     volumes:
-      # 將本地源代碼掛載到容器中，實現開發時的熱重載
-      # 注意：node_modules 不掛載，以使用容器內安裝的版本
-      - .:/app 
-      - /app/node_modules 
-    # 使用 nodemon 進行開發，如果 Dockerfile 的 CMD 是 node dist/server.js，則覆蓋它
-    # 確保 package.json 中的 dev script 使用 nodemon 監控 TypeScript 文件
-    command: npm run dev 
-    restart: unless-stopped 
+      - .:/app
+    # 強制在容器啟動時重新安裝依賴，以確保架構正確
+    command: sh -c "rm -rf /app/node_modules && npm install && npm run build && node dist/bin/server.js"
+    restart: unless-stopped
