--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "tickeasy-backend",
+  "name": "tickeasy-team-backend",
   "version": "1.0.0",
   "description": "tickeasy-backend",
   "main": "dist/bin/server.js",
   "scripts": {
     "start": "node dist/bin/server.js",
-    "dev": "nodemon bin/server.ts",
+    "dev": "nodemon --exec ts-node bin/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
@@ -21,8 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/http-errors": "^2.0.4",
-    "@types/validator": "^13.15.0",
+    "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -34,11 +33,13 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.34.1",
     "typeorm": "^0.3.17",
     "validator": "^13.15.0"
   },
@@ -48,15 +49,19 @@
     "@types/cors": "^2.8.16",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.9.0",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^2.0.16",
+    "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.15.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
