--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tickeasy-team-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "tickeasy-backend",
   "main": "dist/bin/server.js",
   "scripts": {
@@ -9,7 +10,9 @@
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "keywords": [
     "ticketing",
@@ -62,11 +65,14 @@
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.8.3"
   }
 }
