chore: set up eslint and add readme.md content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "lib": ["ES2020"],
     "outDir": "./dist",
     "rootDir": ".",
@@ -16,4 +16,4 @@
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
-} 
+}
