--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@typescript-eslint/parser": "^8.32.0",
     "eslint": "^9.26.0",
     "jest": "^29.7.0",
+    "jiti": "^2.4.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
