--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/bin/server.js",
   "scripts": {
     "start": "node dist/bin/server.js",
-    "dev": "nodemon --exec ts-node bin/server.ts",
+    "dev": "tsx --no-warnings bin/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
@@ -41,9 +41,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "sharp": "^0.34.1",
-    "typeorm": "^0.3.17",
+    "typeorm": "^0.3.23",
     "validator": "^13.15.0"
   },
   "devDependencies": {
@@ -74,6 +74,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0"
   }
