修正：將開發腳本從 tsx 更改為使用 nodemon 和 ts-node，以改善開發過程中的即時重載功能

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/bin/server.js",
   "scripts": {
     "start": "node dist/bin/server.js",
-    "dev": "tsx --no-warnings bin/server.ts",
+    "dev": "nodemon --exec ts-node bin/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
