--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/bin/server.js",
   "scripts": {
     "start": "node dist/bin/server.js",
-    "dev": "nodemon --exec ts-node bin/server.ts",
+    "dev": "tsx watch bin/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
@@ -73,6 +73,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
