修正：更新 package.json 中的開發腳本為 tsx，並調整 tsconfig.json 的編譯選項以符合 ES2020 標準；同時在多個模型中新增類型定義，確保所有欄位的類型正確且一致。

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "main": "dist/bin/server.js",
   "scripts": {
     "start": "node dist/bin/server.js",
-    "dev": "nodemon --exec ts-node bin/server.ts",
+    "dev": "tsx watch bin/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
     "test": "jest",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "keywords": [
     "ticketing",
