--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^1.4.5-lts.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.1",
+    "openai": "^5.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
