--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ecpay_aio_nodejs": "^1.2.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.2.0",
