--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ecpay_aio_nodejs": "^1.2.2",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.2.0",
