--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node dist/bin/server.js",
     "dev": "tsx watch bin/server.ts",
-    "build": "tsc",
+    "build": "tsc && cp -r views dist/views",
+    "build-windows": "tsc && xcopy views dist\\views /E /I /Y",
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
     "test": "jest",
