第23隻api 取得票券詳情

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.3.1",
     "ecpay_aio_nodejs": "^1.2.2",
     "ejs": "^3.1.10",
