--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
     "test": "jest",
+    "test:mcp": "node test-mcp.js",
+    "mcp:start": "node -e \"import('./services/mcp-service.js').then(({mcpService}) => mcpService.start())\"",
+    "verify:setup": "node verify-setup.js",
+    "test:simple": "node simple-test.js",
+    "test:support": "node test-support-api.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
