新增客服 API 調試測試及使用 fetch 的測試檔案，並更新 package.json 以包含新的測試指令。調整 support-controller 以允許匿名用戶進行會話，並改善錯誤處理邏輯。

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "verify:setup": "node verify-setup.js",
     "test:simple": "node simple-test.js",
     "test:support": "node test-support-api.js",
+    "test:support-simple": "node test-simple-support.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
