新增知識庫功能，包括知識庫初始化腳本、API 路由及控制器，並整合語義搜尋服務。更新 package.json 以包含新的初始化指令，並新增測試腳本以驗證知識庫功能的正確性。

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test:simple": "node simple-test.js",
     "test:support": "node test-support-api.js",
     "test:support-simple": "node test-simple-support.js",
+    "test:semantic-search": "node test-semantic-search.js",
+    "init:knowledge-base": "tsx init-knowledge-base.ts",
+    "init:simple-kb": "tsx init-simple-kb.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
