新增客服系統資料表及相關功能，包括 FAQ 分類、FAQ 問題、客服會話及訊息表格。整合智能客服路由及控制器，並更新 Supabase 客戶端服務以支援知識庫搜尋。新增測試腳本以驗證智能客服功能的正確性，並更新 package.json 以包含新的初始化及測試指令。

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "test:support": "node test-support-api.js",
     "test:support-simple": "node test-simple-support.js",
     "test:semantic-search": "node test-semantic-search.js",
+    "test:smart-customer-service": "node test-smart-customer-service.js",
     "init:knowledge-base": "tsx init-knowledge-base.ts",
     "init:simple-kb": "tsx init-simple-kb.ts",
+    "init:safe-kb": "tsx init-safe-kb.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
