新增 MCP 服務設置指南及測試腳本，整合 FAQ 搜尋服務以取代原有的 MCP 服務。更新 package.json 以包含新的測試指令，並新增多個測試檔案以驗證系統功能的正確性。確保系統在移除 MCP 服務後仍能正常運行，並提供完整的設置驗證流程。

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migrate": "npm run typeorm migration:run -- -d config/database.ts",
     "test": "jest",
-    "test:mcp": "node test-mcp.js",
-    "mcp:start": "node -e \"import('./services/mcp-service.js').then(({mcpService}) => mcpService.start())\"",
-    "verify:setup": "node verify-setup.js",
+    "test:faq-search": "npx tsx test-faq-search.js",
+    "test:post-refactor": "npx tsx test-post-refactor.js",
+    "test:simple-refactor": "npx tsx test-simple-refactor.js",
+    "test:service-layer": "npx tsx test-service-layer.js",
+    "test:ultra-simple": "node test-ultra-simple.js",
     "test:simple": "node simple-test.js",
     "test:support": "node test-support-api.js",
     "test:support-simple": "node test-simple-support.js",
